--- a/bootcamp-milestone-4/package.json
+++ b/bootcamp-milestone-4/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "emailjs-com": "^3.2.0",
     "mongoose": "^8.8.2",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
